--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tagify/ez-tags",
-  "version": "1.0.5",
+  "name": "lingotags",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "prepublishOnly": "npm run build"
   },
   "bin": {
-    "@tagify/ez-tags": "./dist/bin/index.js"
+    "lingotags": "./dist/bin/index.js"
   },
   "keywords": [],
   "author": "",
@@ -36,5 +36,9 @@
   },
   "publishConfig": {
     "encoding": "utf-8"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lingotags/lingotags.git"
   }
 }
