add nested elements, key generation improved.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.10",
     "typescript": "^5.7.3"
   },
