--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lingotags",
-  "version": "1.0.3",
+  "version": "1.0.3-patch.1",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
